API fonctionne ,probleme authentification sur Flask
