# User_API/internal/controllers/users/get_users.go
@@ -1,23 +1,24 @@
-package collections
+package users
 
 import (
 	"encoding/json"
-	"github.com/sirupsen/logrus"
 	"middleware/example/internal/models"
-	"middleware/example/internal/services/collections"
+	"middleware/example/internal/repositories/users"
 	"net/http"
+
+	"github.com/sirupsen/logrus"
 )
 
-// GetCollections
-// @Tags         collections
-// @Summary      Get collections.
-// @Description  Get collections.
-// @Success      200            {array}  models.Collection
+// GetUsers
+// @Tags         users
+// @Summary      Get users.
+// @Description  Get users.
+// @Success      200            {array}  models.User
 // @Failure      500             "Something went wrong"
-// @Router       /collections [get]
-func GetCollections(w http.ResponseWriter, _ *http.Request) {
+// @Router       /users [get]
+func GetUsers(w http.ResponseWriter, _ *http.Request) {
 	// calling service
-	collections, err := collections.GetAllCollections()
+	users, err := users.GetAllUsers()
 	if err != nil {
 		// logging error
 		logrus.Errorf("error : %s", err.Error())
@@ -35,7 +36,7 @@ func GetCollections(w http.ResponseWriter, _ *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusOK)
-	body, _ := json.Marshal(collections)
+	body, _ := json.Marshal(users)
 	_, _ = w.Write(body)
 	return
 }
